--- a/src/pages/library.astro
+++ b/src/pages/library.astro
@@ -2,11 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import NavBar from '../components/common/NavBar.svelte';
 import LibraryBrowser from '../components/library/LibraryBrowser.svelte';
-
-export const prerender = true;
 ---
 
 <Layout title="Library - SifterSearch" description="Browse the complete document library. Explore sacred texts, scriptures, and scholarly works from world religions.">
   <NavBar client:load currentPage="library" />
-  <LibraryBrowser client:only="svelte" />
+  <LibraryBrowser client:load />
 </Layout>
